--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,18 +1,19 @@
 # use react/vite image
-FROM reactjs/vite:latest
-
+FROM node:lts-alpine
 # make a directory for the app client
-RUN mkdir -p /usr/src/app/client
+RUN mkdir -p /app/client
 # set the working directory
-WORKDIR /usr/src/app/client
-# copy the package.json file to the working directory
-COPY package.json /usr/src/app/client
+WORKDIR /app/client
 
-# install the dependencies
+# copy the package.json file to the working directory and install dependencies
+COPY package.json /app/client
 RUN yarn install
+
 # copy the rest of the files to the working directory
-COPY . /usr/src/app/client
+COPY . /app/client/
+
 # expose the port 3000 to the host
-EXPOSE 3000
+EXPOSE 8080
+
 # run the command to start the client
 CMD ["yarn", "dev"]
